syntax="proto3";

package example;

message ReqRegisterService {
    int32 SrvId = 1;
    int32 SrvType = 2;
}

message AckRegisterService {
    int32 code = 1;
    string data = 2;
}

message ReqHeartBeat {
    int64 tm = 1;
}

message AckHeartBeat {
    int32 code = 1;
}

message ReqMsg {
    int64 fromId = 1;
    int64 toId = 2;
    string msg = 3;
}

message AckMsg {
    int32 code = 1;
}

message ReqGroupMsg {
    int64 fromId = 1;
    int64 toId = 2;
    int64 groupId = 3;
    string msg = 4;
}

message AckGroupMsg {
    int32 code = 1;
}